# my_tinkoff_investments

./: .gitignore  .tinkoff_tokens.env.example  api_tokens.py  config.py  data_to_xlsx.py  dividends_shares.py  main.py  operations.py  pyproject.toml  requirements.txt  tick_trin.py  trend_breakdown.py  updates.py
Bank_card/: main.py
my_tinkoff/: csv_candles.py  date_utils.py  enums.py  exceptions.py  helpers.py  schemas.py  token_manager.py
my_tinkoff/api_calls/: market_data.py  market_data_stream.py
src/: api_calls.py  converter.py  csv_candles.py  date_utils.py  exceptions.py  helpers.py  instruments.py  market_data.py  my_csv.py  my_logging.py  schemas.py  singletone.py  token_manager.py
src/analyze/: dividends_shares.py
src/api_calls/: instruments.py  market_data.py  market_data_stream.py
src/backtrader/: csv_data.py
src/instruments/: shares.py
src/my_tinkoff/: converter.py  csv_candles.py  date_utils.py  exceptions.py  helpers.py  schemas.py  token_manager.py
src/my_tinkoff/api_calls/: instruments.py  market_data.py  market_data_stream.py
src/my_tinkoff_investments/: csv_candles.py  enums.py  exceptions.py  helpers.py  my_logging.py  schemas.py  token_manager.py
src/strategies/: trend_breakdown.py
tests/: conftest.py  dataset.py  my_logging.py  schemas.py  test_api_calls.py  test_config.py  test_csv_candles.py  test_schemas.py
tests/api_calls/: test_instruments.py  test_market_data.py
tests/candles/: CNTL_full_range_exists.csv  CNTL_gap_in_the_beginning.csv  CNTL_gap_in_the_end.csv  POSI_gaps_everywhere.csv  SBER_full_range_exists.csv
(+4 files in other folders)
